--- a/Dockerfile.redmine
+++ b/Dockerfile.redmine
@@ -11,6 +11,7 @@ RUN apt update \
         postgresql-client \
         sudo \
         supervisor \
+    && apt clean \
     && rm -rf /var/lib/apt/lists/* \
     && cd /usr/src/redmine \
     && git clone -b redmine4.2  https://github.com/farend/redmine_theme_farend_bleuclair.git public/themes/bleuclair
